Add meta tags for search engines

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Meta tags for search engines -->
+    <meta name="description"
+        content="Felipe Giubilei. Photographer and Filmmaker, São Paulo, Belo Horizonte, Brazil">
+    <meta name="keywords" content="Photgrapher, photography, filmmaker, filmmaking, concerts, urban, São Paulo, Belo Horizonte, Brazil">
+    <title>F.Giubilei - Photgrapher + Filmmaker</title>
 </head>
 <body>
     
