Add font awesome script

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 <body>
 
 </body>
-
+ <!--Font Awesome Kit-->
+ <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
 </html>
