--- a/index.html
+++ b/index.html
@@ -20,8 +20,36 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header>
 
+    </header>
+
+    <!-- Main Content -->
+    <main>
+
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <ul id="social-networks">
+            <li><a href="https://www.instagram.com/felipegiubilei/" target="_blank" rel="noopener"
+                    aria-label="visit Felipe's instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a></li>
+            <li><a href="https://www.flickr.com/photos/felipegfotografia/page9" target="_blank" rel="noopener"
+                    aria-label="visit Felipe's flickr page (opens in a new tab)"><i class="fa-brands fa-flickr"></i></a>
+            </li>
+            <li><a href="https://www.linkedin.com/in/felipe-giubilei-25942a233/?originalSubdomain=br" target="_blank"
+                    rel="noopener" aria-label="visit Felipe's LinkedIn page (opens in a new tab)"><i
+                        class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Ffelipegiubilei" target="_blank"
+                    rel="noopener" aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-x-twitter"></i></a></li>
+
+    </footer>
+    <!--Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
 </body>
- <!--Font Awesome Kit-->
- <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
+
+
 </html>
