Add custom styles to html.index

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Felipe Giubilei. Photographer and Filmmaker, São Paulo, Belo Horizonte, Brazil">
+    <meta name="description" content="Felipe Giubilei. Photographer and Videomaker, São Paulo, Belo Horizonte, Brazil">
     <meta name="keywords"
-        content="Photgrapher, photography, filmmaker, filmmaking, concerts, urban, São Paulo, Belo Horizonte, Brazil">
+        content="Photgrapher, photography, videomaker, videomaking, concerts, urban, São Paulo, Belo Horizonte, Brazil">
     <!-- Title -->
-    <title>F.Giubilei - Photgrapher + Filmmaker</title>
+    <title>F. Giubilei - Photgrapher + Videomaker</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -22,12 +22,12 @@
 <body>
     <!-- Header -->
     <header>
-
+        <h1>Header<h1>
     </header>
 
     <!-- Main Content -->
     <main>
-
+        <h2>Main Content</h2>
     </main>
 
     <!-- Footer -->
