Fix a bug on the <a> elements, not inheriting colors form parent

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords"
         content="Photgrapher, photography, videomaker, videomaking, concerts, urban, São Paulo, Belo Horizonte, Brazil">
     <!-- Title -->
-    <title>F. Giubilei - Photgrapher + Videomaker</title>
+    <title>F. Giubilei | Photgrapher + Videomaker</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -22,7 +22,14 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>Header<h1>
+    <a href="index.html"><h1 id="logo">F. Giubilei<h1></h1></a>
+        <p>Photographer + Videomaker</p>
+        <nav><ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="">Gallery</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Get in touch!</a></li>
+        </ul></nav>
     </header>
 
     <!-- Main Content -->
@@ -31,7 +38,7 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer><h2>Footer</h2>
         <ul id="social-networks">
             <li><a href="https://www.instagram.com/felipegiubilei/" target="_blank" rel="noopener"
                     aria-label="visit Felipe's instagram page (opens in a new tab)"><i
@@ -43,8 +50,8 @@
                     rel="noopener" aria-label="visit Felipe's LinkedIn page (opens in a new tab)"><i
                         class="fa-brands fa-linkedin"></i></a></li>
             <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Ffelipegiubilei" target="_blank"
-                    rel="noopener" aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-square-x-twitter"></i></a></li>
+                    rel="noopener" aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><h2><i
+                        class="fa-brands fa-square-x-twitter"></i></h2></a></li>
 
     </footer>
     <!--Font Awesome Kit-->
