--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     rel="noopener" aria-label="visit Felipe's LinkedIn page (opens in a new tab)"><i
                         class="fa-brands fa-linkedin"></i></a></li>
             <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Ffelipegiubilei" target="_blank"
-                    rel="noopener" aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><h2><i
-                        class="fa-brands fa-square-x-twitter"></i></h2></a></li>
+                    rel="noopener" aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-x-twitter"></i></a></li>
 
     </footer>
     <!--Font Awesome Kit-->
