Restyle the footer and theme colors

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Felipe Giubilei. Photographer and Videomaker, São Paulo, Belo Horizonte, Brazil">
+    <meta name="description"
+        content="Felipe Giubilei. Photographer and Videographer, São Paulo, Belo Horizonte, Brazil">
     <meta name="keywords"
-        content="Photgrapher, photography, videomaker, videomaking, concerts, urban, São Paulo, Belo Horizonte, Brazil">
+        content="Photgrapher, photography, videographer, videography, concerts, wedding, photoshoots, urban, São Paulo, Belo Horizonte, Brazil">
     <!-- Title -->
-    <title>F. Giubilei | Photgrapher + Videomaker</title>
+    <title>F. Giubilei | Photgrapher + Videographer</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -22,14 +23,21 @@
 <body>
     <!-- Header -->
     <header>
-    <a href="index.html"><h1 id="logo">F. Giubilei<h1></h1></a>
+        <a href="index.html">
+            <div id="logo">
+                <i class="fa-solid fa-camera-retro"></i>
+                <h1>F. Giubilei</h1>
+            </div>
+        </a>
         <p>Photographer + Videomaker</p>
-        <nav><ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Get in touch!</a></li>
-        </ul></nav>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Get in touch!</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Main Content -->
@@ -38,7 +46,8 @@
     </main>
 
     <!-- Footer -->
-    <footer><h2>Footer</h2>
+    <footer>
+        <p>Check out my social media!</p>
         <ul id="social-networks">
             <li><a href="https://www.instagram.com/felipegiubilei/" target="_blank" rel="noopener"
                     aria-label="visit Felipe's instagram page (opens in a new tab)"><i
