Format the CSS file and add minor changes to head element

--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
     <header>
         <a href="index.html">
             <div id="logo">
-                <i class="fa-solid fa-camera-retro"></i>
-                <h1>F. Giubilei</h1>
+                <h1><i class="fa-solid fa-camera-retro"></i>F. Giubilei</h1>
             </div>
         </a>
-        <p>Photographer + Videomaker</p>
+        <p>photography</p>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -61,7 +60,6 @@
             <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Ffelipegiubilei" target="_blank"
                     rel="noopener" aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
                         class="fa-brands fa-square-x-twitter"></i></a></li>
-
     </footer>
     <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
