Add responsivity to footer element

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
     <!-- Footer -->
     <footer>
-        <p>Check out my social media!</p>
-        <ul id="social-networks">
+        <div id="social-container">
+        <div><p>Check out my social media!</p></div>
+        <div><ul id="social-networks">
             <li><a href="https://www.instagram.com/felipegiubilei/" target="_blank" rel="noopener"
                     aria-label="visit Felipe's instagram page (opens in a new tab)"><i
                         class="fa-brands fa-square-instagram"></i></a></li>
@@ -59,7 +60,7 @@
                         class="fa-brands fa-linkedin"></i></a></li>
             <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Ffelipegiubilei" target="_blank"
                     rel="noopener" aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-square-x-twitter"></i></a></li>
+                        class="fa-brands fa-square-x-twitter"></i></a></li></div></div>
     </footer>
     <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
