--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <div id="logo">
-                <h1><i class="fa-solid fa-camera-retro"></i>F. Giubilei</h1>
-            </div>
+            <img src="assets/images/logo.png" alt="website logo" width="150" height="38.25">
         </a>
-        <p>photography</p>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -47,20 +44,28 @@
     <!-- Footer -->
     <footer>
         <div id="social-container">
-        <div><p>Check out my social media!</p></div>
-        <div><ul id="social-networks">
-            <li><a href="https://www.instagram.com/felipegiubilei/" target="_blank" rel="noopener"
-                    aria-label="visit Felipe's instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-square-instagram"></i></a></li>
-            <li><a href="https://www.flickr.com/photos/felipegfotografia/page9" target="_blank" rel="noopener"
-                    aria-label="visit Felipe's flickr page (opens in a new tab)"><i class="fa-brands fa-flickr"></i></a>
-            </li>
-            <li><a href="https://www.linkedin.com/in/felipe-giubilei-25942a233/?originalSubdomain=br" target="_blank"
-                    rel="noopener" aria-label="visit Felipe's LinkedIn page (opens in a new tab)"><i
-                        class="fa-brands fa-linkedin"></i></a></li>
-            <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Ffelipegiubilei" target="_blank"
-                    rel="noopener" aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-square-x-twitter"></i></a></li></div></div>
+            <div>
+                <p>Check out my social media!</p>
+            </div>
+            <div>
+                <ul id="social-networks">
+                    <li><a href="https://www.instagram.com/felipegiubilei/" target="_blank" rel="noopener"
+                            aria-label="visit Felipe's instagram page (opens in a new tab)"><i
+                                class="fa-brands fa-square-instagram"></i></a></li>
+                    <li><a href="https://www.flickr.com/photos/felipegfotografia/page9" target="_blank" rel="noopener"
+                            aria-label="visit Felipe's flickr page (opens in a new tab)"><i
+                                class="fa-brands fa-flickr"></i></a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/in/felipe-giubilei-25942a233/?originalSubdomain=br"
+                            target="_blank" rel="noopener"
+                            aria-label="visit Felipe's LinkedIn page (opens in a new tab)"><i
+                                class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Ffelipegiubilei"
+                            target="_blank" rel="noopener"
+                            aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
+                                class="fa-brands fa-square-x-twitter"></i></a></li>
+            </div>
+        </div>
     </footer>
     <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
