--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <img src="assets/images/logo.png" alt="website logo" width="150" height="38.25">
+            <img src="assets/images/logo.png" alt="website logo" width="125" height="38.25">
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a class="nav-selected" href="index.html">Home</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Get in touch!</a></li>
