--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
-            <ul>
+            <ul id="ul-menu">
                 <li><a class="nav-selected" href="index.html">Home</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">About</a></li>
