--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- Main Content -->
     <main>
-        <h2>Main Content</h2>
+        <section id="hero"></section>
     </main>
 
     <!-- Footer -->
