--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords"
         content="Photgrapher, photography, videographer, videography, concerts, wedding, photoshoots, urban, São Paulo, Belo Horizonte, Brazil">
     <!-- Title -->
-    <title>F. Giubilei | Photgrapher + Videographer</title>
+    <title>F. Giubilei | Photographer + Videographer</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -40,7 +40,13 @@
 
     <!-- Main Content -->
     <main>
-        <section id="hero"></section>
+        <section id="hero">
+            <div id="cover-text">
+                <h3>Freelance Professional</h3>
+                <h2>Photographer +</h2>
+                <h2>Videographer </h2>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
