Add Polaroid Section to main element

--- a/index.html
+++ b/index.html
@@ -47,6 +47,27 @@
                 <h2>Videographer </h2>
             </div>
         </section>
+        <section id="polaroid-section">
+            <div id="polaroid-container">
+                <div id="polaroid">
+                    <img src="assets/images/polaroid-1.jpg" alt="">
+                    <p id="caption">14 years of experience<br>
+                        More than 150 photoshoots
+                    </p>
+                </div>
+                <div id="polaroid">
+                    <img src="assets/images/polaroid-2.jpg" alt="">
+                    <p id="caption">Concerts, Weddings, Couple’s Photoshoots, Merchandising and Videomaking
+                    </p>
+                </div>
+                <div id="polaroid">
+                    <img src="assets/images/polaroid-3.jpg" alt="">
+                    <p id="caption">São Paulo, Belo Horizonte and
+                        anywhere in between
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
