Add alt description to images at index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- Main Content -->
     <main>
-        <section id="hero">
+        <section id="hero" alt="Shirtless man dancing at a concert, surrounded by a crowd, with purple and blue spotlights illuminating the background.">
             <div id="cover-text">
                 <h3>Freelance Professional</h3>
                 <h2>Photographer +</h2>
@@ -50,26 +50,25 @@
         <section id="polaroid-section">
             <div id="polaroid-container">
                 <div id="polaroid">
-                    <img src="assets/images/polaroid-1.jpg" alt="">
-                    <p id="caption">14 years of experience<br>
-                        More than 150 photoshoots
+                    <img src="assets/images/polaroid-1.jpg" alt="Silhouette of a man playing guitar on a stage illuminated by purple spotlights.">
+                    <p id="caption"> Unlock a world of visual excellence with 14 years of expertise behind the lens! <br>
+                        
                     </p>
                 </div>
                 <div id="polaroid">
-                    <img src="assets/images/polaroid-2.jpg" alt="">
-                    <p id="caption">Concerts, Weddings, Couple’s Photoshoots, Merchandising and Videomaking
+                    <img src="assets/images/polaroid-2.jpg" alt="Short-haired girl wrapped in a blanket in the middle of a dry field under winter skies.">
+                    <p id="caption">Over 150 sensational photoshoots, each a testament to mastery and creativity
                     </p>
                 </div>
                 <div id="polaroid">
-                    <img src="assets/images/polaroid-3.jpg" alt="">
-                    <p id="caption">São Paulo, Belo Horizonte and
-                        anywhere in between
+                    <img src="assets/images/polaroid-3.jpg" alt="Open-air wedding party at nighttime, with a big tree adorned by yellow lanterns illuminating the ambient surroundings.">
+                    <p id="caption">Book now for a visual journey that transcends the ordinary! 
                     </p>
                 </div>
             </div>
         </section>
     </main>
-
+    
     <!-- Footer -->
     <footer>
         <div id="social-container">
