--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
     <!-- Main Content -->
     <main>
-        <section id="hero" alt="Shirtless man dancing at a concert, surrounded by a crowd, with purple and blue spotlights illuminating the background.">
+        <section id="hero"
+            alt="Shirtless man dancing at a concert, surrounded by a crowd, with purple and blue spotlights illuminating the background.">
             <div id="cover-text">
                 <h3>Freelance Professional</h3>
                 <h2>Photographer +</h2>
@@ -50,25 +51,26 @@
         <section id="polaroid-section">
             <div id="polaroid-container">
                 <div id="polaroid">
-                    <img src="assets/images/polaroid-1.jpg" alt="Silhouette of a man playing guitar on a stage illuminated by purple spotlights.">
-                    <p id="caption"> Unlock a world of visual excellence with 14 years of expertise behind the lens! <br>
-                        
+                    <a href="about.html"><img src="assets/images/polaroid-1.jpg" alt="Silhouette of a man playing guitar on a stage illuminated by purple spotlights.">
+                    <p id="caption"> Unlock a world of visual excellence with 14 years of expertise behind the lens!
                     </p>
+                </a>
                 </div>
                 <div id="polaroid">
-                    <img src="assets/images/polaroid-2.jpg" alt="Short-haired girl wrapped in a blanket in the middle of a dry field under winter skies.">
+                    <a href="gallery.html"><img src="assets/images/polaroid-2.jpg" alt="Short-haired girl wrapped in a blanket in the middle of a dry field under winter skies.">
                     <p id="caption">Over 150 sensational photoshoots, each a testament to mastery and creativity
                     </p>
+                </a>
                 </div>
                 <div id="polaroid">
-                    <img src="assets/images/polaroid-3.jpg" alt="Open-air wedding party at nighttime, with a big tree adorned by yellow lanterns illuminating the ambient surroundings.">
-                    <p id="caption">Book now for a visual journey that transcends the ordinary! 
-                    </p>
+                    <a href="contact.html"><img src="assets/images/polaroid-3.jpg" alt="Open-air wedding party at nighttime, with a big tree adorned by yellow lanterns illuminating the ambient surroundings.">
+                    <p id="caption">Book now for a visual journey that transcends the ordinary!</p>
+                </a>
                 </div>
             </div>
         </section>
     </main>
-    
+
     <!-- Footer -->
     <footer>
         <div id="social-container">
