Add transform to hover icons and correct id and class in objects

--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
             </div>
         </section>
         <section id="polaroid-section">
-            <div id="polaroid-container">
-                <div id="polaroid">
+            <div class="polaroid-container">
+                <div class="polaroid">
                     <a href="about.html"><img src="assets/images/polaroid-1.jpg" alt="Silhouette of a man playing guitar on a stage illuminated by purple spotlights.">
-                    <p id="caption"> Unlock a world of visual excellence with 14 years of expertise behind the lens!
+                    <p class="caption"> Unlock a world of visual excellence with 14 years of expertise behind the lens!
                     </p>
                 </a>
                 </div>
-                <div id="polaroid">
+                <div class="polaroid">
                     <a href="gallery.html"><img src="assets/images/polaroid-2.jpg" alt="Short-haired girl wrapped in a blanket in the middle of a dry field under winter skies.">
-                    <p id="caption">Over 150 sensational photoshoots, each a testament to mastery and creativity
+                    <p class="caption">Over 150 sensational photoshoots, each a testament to mastery and creativity
                     </p>
                 </a>
                 </div>
-                <div id="polaroid">
+                <div class="polaroid">
                     <a href="contact.html"><img src="assets/images/polaroid-3.jpg" alt="Open-air wedding party at nighttime, with a big tree adorned by yellow lanterns illuminating the ambient surroundings.">
-                    <p id="caption">Book now for a visual journey that transcends the ordinary!</p>
+                    <p class="caption">Book now for a visual journey that transcends the ordinary!</p>
                 </a>
                 </div>
             </div>
