Add polaroid anchor icons to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,44 @@
 
     <!-- Main Content -->
     <main>
-    
+        <section id="polaroid-section">
+            <div class="polaroid-container">
+                <div class="polaroid">
+                    <a href="about.html"><img src="assets/images/gallery-icons/concerts.jpg" alt="A female singer with red hair is singing on the stage illuminated by light blue spotlights">
+                    <h2>Concerts</h2>
+                </a>
+                </div>
+                <div class="polaroid">
+                    <a href="gallery.html"><img src="assets/images/gallery-icons/family-pics.jpg" alt="A girl wearing a flower crown is leaning towards the belly of her pregnant mother">
+                    <h2>Familly Moments</h2>
+                </a>
+                </div>
+                <div class="polaroid">
+                    <a href="contact.html"><img src="assets/images/gallery-icons/individual.jpg" alt="A man partially covered by tall dry grass during dusk">
+                        <h2>Solo Photoshoots</h2>
+                </a></div>
+                <div class="polaroid">
+                    <a href="contact.html"><img src="assets/images/gallery-icons/institutional-events.jpg" alt="A conference room with red and blue lighting">
+                        <h2>Institutional Photography</h2>
+                </a>
+                </div>
+                <div class="polaroid">
+                    <a href="contact.html"><img src="assets/images/gallery-icons/urban.jpg" alt="A building with a blue and brown pattern">
+                        <h2>Urban Photography</h2>
+                </a>
+                </div>
+                <div class="polaroid">
+                    <a href="contact.html"><img src="assets/images/gallery-icons/weddings.jpg" alt="Exquisite golden cutlery and elegant plates arranged on a table, bathed in the warm glow of candlelight">
+                        <h2>Weddings</h2>
+                </a>
+                </div>
+                <div class="polaroid">
+                    <a href="contact.html"><img src="assets/images/gallery-icons/short-films.png" alt="The opening credits capture a solitary figure strolling down a dimly lit street at night. Overhead, the title of the short film, 'Paralisia,' adds an intriguing touch to the scene.">
+                        <h2>Short-Films</h2>
+                </a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
