Add content to gallery/video

--- a/gallery-video.html
+++ b/gallery-video.html
@@ -41,13 +41,19 @@
     <!-- Main Content -->
     <main>
         <div id="video-container">
-            <div class="video">
-                <video width="80vw" height="auto" controls>
-                    <source src="url()"
-                </video>
+            <div class="video-window">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/zk1ShvzaXj8?si=FnvhnAOWddE0Yl8o"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
+            <div class="video-window"></div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/k0SgqG-kU5Q?si=4L29ZydIprd5I49Y"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
         </div>
-    
+        </div>
     </main>
 
     <!-- Footer -->
