Add content and responsivity to gallery/videos.html

--- a/gallery-video.html
+++ b/gallery-video.html
@@ -31,9 +31,9 @@
         <nav>
             <ul id="ul-menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a class="nav-selected" href="gallery.html">Gallery</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a class="nav-selected" href="contact.html">Get in touch!</a></li>
+                <li><a href="contact.html">Get in touch!</a></li>
             </ul>
         </nav>
     </header>
@@ -41,18 +41,44 @@
     <!-- Main Content -->
     <main>
         <div id="video-container">
-            <div class="video-window">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/zk1ShvzaXj8?si=FnvhnAOWddE0Yl8o"
+            <div class="video-frame">
+                <iframe class="video-window" src="https://www.youtube.com/embed/zk1ShvzaXj8?si=FnvhnAOWddE0Yl8o"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
+                <h2>Short-Film: Paralisia (Paralysis)</h2>
             </div>
-            <div class="video-window"></div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/k0SgqG-kU5Q?si=4L29ZydIprd5I49Y"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+
+            <div class="video-frame">
+                <iframe class="video-window" src="https://www.youtube.com/embed/k0SgqG-kU5Q?si=4L29ZydIprd5I49Y"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <h2>Short-Film: Café</h2>
+            </div>
+
+            <div class="video-frame">
+                <iframe class="video-window" src="https://www.youtube.com/embed/I52Czcx4T_M?si=L39DPGX1AivfDyaq"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <h2>Institutional Video: Inkasa Shushi Garden</h2>
+            </div>
+
+            <div class="video-frame">
+                <iframe class="video-window" src="https://www.youtube.com/embed/VZ0tgIJbOh4?si=C6Y7IHxtJL0g8VgZ" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 allowfullscreen></iframe>
-        </div>
+                <h2>Institutional Video: Casa Café Brasil</h2>
+            </div>
+
+            <div class="video-frame">
+                <iframe class="video-window" src="https://www.youtube.com/embed/D7X6BZ2BGSs?si=YDqJQfXcosBgRPO_"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <h2>Short-Film: A Chuva, o Sol e o Futebol (The Rain, The Sun and Soccer)</h2>
+            </div>
         </div>
     </main>
 
