--- a/gallery.html
+++ b/gallery.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="polaroid">
                     <a href="gallery-video.html"><img src="assets/images/gallery-icons/short-films.png" alt="The opening credits capture a solitary figure strolling down a dimly lit street at night. Overhead, the title of the short film, 'Paralisia,' adds an intriguing touch to the scene.">
-                        <h2>Short-Films</h2>
+                        <h2>Videos</h2>
                 </a>
                 </div>
             </div>
