Add inkasa and casa café brasil to partners section

--- a/about.html
+++ b/about.html
@@ -102,6 +102,18 @@
                         <img class="logo-image" src="assets/images/partner-logos/nascentes-da-fortaleza.jpg"
                             alt="Casa Natura logo"></a>
                 </div>
+                <div>
+                    <a href="https://www.instagram.com/inkasasushigarden/" target="_blank" rel="noopener"
+                        aria-label="visit Felipe's partner company Inkasa Sushi Garden isntragam page (opens in a new tab)">
+                        <img class="logo-image" src="assets/images/partner-logos/inkasa.jpg"
+                            alt="Inkasa Sushi Garden"></a>
+                </div>
+                <div>
+                    <a href="https://www.cafecasabrasil.com.br/" target="_blank" rel="noopener"
+                        aria-label="visit Felipe's partner company Casa Café Brasil website (opens in a new tab)">
+                        <img class="logo-image" src="assets/images/partner-logos/casa-cafe-brasil.jpg"
+                            alt="Casa Café Brasil"></a>
+                </div>
             </div>
         </section>
     </main>
