Add youtube to social networks - footer element

--- a/about.html
+++ b/about.html
@@ -45,7 +45,8 @@
                 <img id="about-image" src="assets/images/about-img.jpg" alt="Photographer's picture holding a camera">
             </div>
             <div id="about-text-box">
-                <p class="about-text"> Felipe Giubilei, a highly skilled and trendsetting professional in the dynamic world
+                <p class="about-text"> Felipe Giubilei, a highly skilled and trendsetting professional in the dynamic
+                    world
                     of audiovisuals, boasts an impressive journey.
                     Kicked off as a Cinematographer and Editor at TV Paraíso (2010-2011), honing those essential
                     skills.</p>
@@ -141,6 +142,10 @@
                             target="_blank" rel="noopener"
                             aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
                                 class="fa-brands fa-square-x-twitter"></i></a></li>
+                    <li><a href="https://www.youtube.com/@felipegiubilei"
+                            target="_blank" rel="noopener"
+                            aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
+                            class="fa-brands fa-square-youtube"></i></i></a></li>
             </div>
         </div>
     </footer>
