--- a/index.html
+++ b/index.html
@@ -51,21 +51,25 @@
         <section id="polaroid-section">
             <div class="polaroid-container">
                 <div class="polaroid">
-                    <a href="about.html"><img src="assets/images/polaroid-1.jpg" alt="Silhouette of a man playing guitar on a stage illuminated by purple spotlights.">
-                    <p class="caption"> Unlock a world of visual excellence with 14 years of expertise behind the lens!
-                    </p>
-                </a>
+                    <a href="about.html"><img src="assets/images/polaroid-1.jpg"
+                            alt="Silhouette of a man playing guitar on a stage illuminated by purple spotlights.">
+                        <p class="caption"> Unlock a world of visual excellence with 14 years of expertise behind the
+                            lens!
+                        </p>
+                    </a>
                 </div>
                 <div class="polaroid">
-                    <a href="gallery.html"><img src="assets/images/polaroid-2.jpg" alt="Short-haired girl wrapped in a blanket in the middle of a dry field under winter skies.">
-                    <p class="caption">Over 150 sensational photoshoots, each a testament to mastery and creativity
-                    </p>
-                </a>
+                    <a href="gallery.html"><img src="assets/images/polaroid-2.jpg"
+                            alt="Short-haired girl wrapped in a blanket in the middle of a dry field under winter skies.">
+                        <p class="caption">Over 150 sensational photoshoots, each a testament to mastery and creativity
+                        </p>
+                    </a>
                 </div>
                 <div class="polaroid">
-                    <a href="contact.html"><img src="assets/images/polaroid-3.jpg" alt="Open-air wedding party at nighttime, with a big tree adorned by yellow lanterns illuminating the ambient surroundings.">
-                    <p class="caption">Book now for a visual journey that transcends the ordinary!</p>
-                </a>
+                    <a href="contact.html"><img src="assets/images/polaroid-3.jpg"
+                            alt="Open-air wedding party at nighttime, with a big tree adorned by yellow lanterns illuminating the ambient surroundings.">
+                        <p class="caption">Book now for a visual journey that transcends the ordinary!</p>
+                    </a>
                 </div>
             </div>
         </section>
@@ -94,6 +98,9 @@
                             target="_blank" rel="noopener"
                             aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
                                 class="fa-brands fa-square-x-twitter"></i></a></li>
+                    <li><a href="https://www.youtube.com/@felipegiubilei" target="_blank" rel="noopener"
+                            aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
+                                class="fa-brands fa-square-youtube"></i></i></a></li>
             </div>
         </div>
     </footer>
