--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,8 @@
 
     <!-- Main Content -->
     <main>
-       
-    
+
+
     </main>
 
     <!-- Footer -->
@@ -67,6 +67,9 @@
                             target="_blank" rel="noopener"
                             aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
                                 class="fa-brands fa-square-x-twitter"></i></a></li>
+                    <li><a href="https://www.youtube.com/@felipegiubilei" target="_blank" rel="noopener"
+                            aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
+                                class="fa-brands fa-square-youtube"></i></i></a></li>
             </div>
         </div>
     </footer>
