--- a/gallery-video.html
+++ b/gallery-video.html
@@ -66,9 +66,10 @@
             </div>
 
             <div class="video-frame">
-                <iframe class="video-window" src="https://www.youtube.com/embed/VZ0tgIJbOh4?si=C6Y7IHxtJL0g8VgZ" 
-                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                allowfullscreen></iframe>
+                <iframe class="video-window" src="https://www.youtube.com/embed/VZ0tgIJbOh4?si=C6Y7IHxtJL0g8VgZ"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
                 <h2>Institutional Video: Casa Café Brasil</h2>
             </div>
 
@@ -105,6 +106,9 @@
                             target="_blank" rel="noopener"
                             aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
                                 class="fa-brands fa-square-x-twitter"></i></a></li>
+                    <li><a href="https://www.youtube.com/@felipegiubilei" target="_blank" rel="noopener"
+                            aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
+                                class="fa-brands fa-square-youtube"></i></i></a></li>
             </div>
         </div>
     </footer>
