--- a/gallery.html
+++ b/gallery.html
@@ -43,38 +43,46 @@
         <section id="polaroid-section">
             <div class="polaroid-container">
                 <div class="polaroid">
-                    <a href="about.html"><img src="assets/images/gallery-icons/concerts.jpg" alt="A female singer with red hair is singing on the stage illuminated by light blue spotlights">
-                    <h2>Concerts</h2>
-                </a>
+                    <a href="about.html"><img src="assets/images/gallery-icons/concerts.jpg"
+                            alt="A female singer with red hair is singing on the stage illuminated by light blue spotlights">
+                        <h2>Concerts</h2>
+                    </a>
                 </div>
                 <div class="polaroid">
-                    <a href="gallery.html"><img src="assets/images/gallery-icons/family-pics.jpg" alt="A girl wearing a flower crown is leaning towards the belly of her pregnant mother">
-                    <h2>Familly Moments</h2>
-                </a>
+                    <a href="gallery.html"><img src="assets/images/gallery-icons/family-pics.jpg"
+                            alt="A girl wearing a flower crown is leaning towards the belly of her pregnant mother">
+                        <h2>Familly Moments</h2>
+                    </a>
                 </div>
                 <div class="polaroid">
-                    <a href="contact.html"><img src="assets/images/gallery-icons/individual.jpg" alt="A man partially covered by tall dry grass during dusk">
+                    <a href="contact.html"><img src="assets/images/gallery-icons/individual.jpg"
+                            alt="A man partially covered by tall dry grass during dusk">
                         <h2>Solo Photoshoots</h2>
-                </a></div>
+                    </a>
+                </div>
                 <div class="polaroid">
-                    <a href="contact.html"><img src="assets/images/gallery-icons/institutional-events.jpg" alt="A conference room with red and blue lighting">
+                    <a href="contact.html"><img src="assets/images/gallery-icons/institutional-events.jpg"
+                            alt="A conference room with red and blue lighting">
                         <h2>Institutional Photography</h2>
-                </a>
+                    </a>
                 </div>
                 <div class="polaroid">
-                    <a href="contact.html"><img src="assets/images/gallery-icons/urban.jpg" alt="A building with a blue and brown pattern">
+                    <a href="contact.html"><img src="assets/images/gallery-icons/urban.jpg"
+                            alt="A building with a blue and brown pattern">
                         <h2>Urban Photography</h2>
-                </a>
+                    </a>
                 </div>
                 <div class="polaroid">
-                    <a href="contact.html"><img src="assets/images/gallery-icons/weddings.jpg" alt="Exquisite golden cutlery and elegant plates arranged on a table, bathed in the warm glow of candlelight">
+                    <a href="contact.html"><img src="assets/images/gallery-icons/weddings.jpg"
+                            alt="Exquisite golden cutlery and elegant plates arranged on a table, bathed in the warm glow of candlelight">
                         <h2>Weddings</h2>
-                </a>
+                    </a>
                 </div>
                 <div class="polaroid">
-                    <a href="gallery-video.html"><img src="assets/images/gallery-icons/short-films.png" alt="The opening credits capture a solitary figure strolling down a dimly lit street at night. Overhead, the title of the short film, 'Paralisia,' adds an intriguing touch to the scene.">
+                    <a href="gallery-video.html"><img src="assets/images/gallery-icons/short-films.png"
+                            alt="The opening credits capture a solitary figure strolling down a dimly lit street at night. Overhead, the title of the short film, 'Paralisia,' adds an intriguing touch to the scene.">
                         <h2>Videos</h2>
-                </a>
+                    </a>
                 </div>
             </div>
         </section>
@@ -103,6 +111,9 @@
                             target="_blank" rel="noopener"
                             aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
                                 class="fa-brands fa-square-x-twitter"></i></a></li>
+                    <li><a href="https://www.youtube.com/@felipegiubilei" target="_blank" rel="noopener"
+                            aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
+                                class="fa-brands fa-square-youtube"></i></i></a></li>
             </div>
         </div>
     </footer>
