--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
     <main>
         <div id="form-container">
             <h2>Get in Touch!</h2>
-            <form action="https://formsubmit.co/hpesciotti@gmail.com" method="post">
+            <form action="https://formsubmit.co/el/bapuno" method="post">
                 <label for="name">Name:</label><br>
                 <input type="text" class="form-single" name="name" placeholder="Your Name" required><br>
                 <label for="email">E-mail:</label><br>
