--- a/contact.html
+++ b/contact.html
@@ -41,21 +41,21 @@
     <!-- Main Content -->
     <main>
         <div id="form-container">
-            <h2>Get in Touch!</h2>
-            <form action="https://formsubmit.co/el/bapuno" method="post">
+            <h3>Get in Touch!</h3>
+            <form action="https://formsubmit.co/el/bapuno" method="POST">
                 <label for="name">Name:</label><br>
                 <input type="text" class="form-single" name="name" placeholder="Your Name" required><br>
-                <label for="email">E-mail:</label><br>
+                <label for="subject">E-mail:</label><br>
                 <input type="text" class="form-single" name="subject" placeholder="Subject" required><br>
-                <label for="subject">Subject:</label><br>
-                <input type="text" class="form-single" name="email" placeholder="email@example.com" required><br>
+                <label for="email">Subject:</label><br>
+                <input type="email" class="form-single" name="email" placeholder="email@example.com" required><br>
                 <label for="message">Message:</label><br>
-                <input type="text" class="form-box" name="message" size="500" placeholder="Book a session or just leave a comment!" required><br><br>
+                <textarea type="text" class="form-box" name="message" size="500"
+                    placeholder="Book a session or just leave a comment!" required></textarea><br>
                 <input type="submit" class="contact-button" value="Send!">
                 <input type="reset" class="contact-button" value="Reset">
             </form>
         </div>
-
     </main>
 
     <!-- Footer -->
