Style the contact section and add responsivity

--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,10 @@
 
     <!-- Main Content -->
     <main>
+        <div id="form-background">
         <div id="form-container">
             <h3>Get in Touch!</h3>
-            <form action="https://formsubmit.co/pesciotti.test@gmail.com" method="POST">
+            <form action="https://formsubmit.co/5704b3c0f00f7b70781c4a6e30ca2640" method="POST">
                 <label for="name">Name:</label><br>
                 <input type="text" class="form-single" name="name" placeholder="Your Name" required><br>
                 <label for="subject">Subject:</label><br>
